2012-10-23  Yao Qi  <yao@codesourcery.com>

	* event-top.c (sigint_token, sighup_token): Replace 'void *'
	with 'static struct async_signal_handler *'.
	(sighup_token, sigquit_token, sigstp_token): Likewise.

2012-10-22  Ali Anwar  <ali_anwar@codesourcery.com>

	* gdbarch.sh (function_list): Use 'pstring' when printing
	a variable which could return NULL.
	* gdbarch.c: Regenerate.

2012-10-10  Joel Brobecker  <brobecker@adacore.com>
            Tom Tromey  <tromey@redhat.com>

	* rs6000-aix-tdep.c (rs6000_aix_osabi_sniffer): Replace
	inneffective if condition by gdb assertion.  Add function
	description comment.

2012-10-19  Joel Brobecker  <brobecker@adacore.com>

	* parser-defs.h (struct exp_descriptor): Document constraint
	on return value for "op_name" callbacks.

2012-10-18  Tom Tromey  <tromey@redhat.com>

	* tracepoint.c (print_one_static_tracepoint_marker): Constify.
	* symtab.c (iterate_over_some_symtabs): Constify.
	* source.h (symtab_to_fullname): Return 'const char *'.
	* source.c (symtab_to_fullname): Return 'const char *'.
	* python/py-symtab.c (stpy_fullname): Constify.
	* cli/cli-cmds.c (edit_command): Constify.
	* breakpoint.c (print_breakpoint_location)
	(update_static_tracepoint): Constify.

2012-10-18  Tom Tromey  <tromey@redhat.com>

	* breakpoint.c (compare_breakpoints): Fix comparison.

2012-10-18  Tom Tromey  <tromey@redhat.com>

	* valprint.c (generic_emit_char, generic_printstr): Pass size of
	gdb_wchar_t to convert_between_encodings.

2012-10-17  Yao Qi  <yao@codesourcery.com>

	* breakpoint.c (invalidate_bp_value_on_memory_change): Add one
	more parameter 'inferior'.
	* corefile.c (write_memory_with_notification): Caller update.

	* mi/mi-cmd-var.c: Include "mi-main.h".
	(mi_cmd_var_assign): Set mi_suppress_notification.data_write_memory
	to 1 and restore it later.
	* mi/mi-cmds.c (mi_cmd mi_cmds): Update for "data-write-memory"
	and "data-write-memory-bytes.
	* mi/mi-interp.c: Include objfiles.h.